--- a/public/manifest.json
+++ b/public/manifest.json
@@ -6,7 +6,8 @@
     "tabs",
     "activeTab",
     "tabCapture",
-    "audio"
+    "audio",
+    "scripting"
   ],
   "background": {
     "service_worker": "background.js"
