--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
   "manifest_version": 3,
-  "name": "React Audio Visualizer Extension",
+  "name": "Saatva Audio Visualizer",
   "version": "1.0",
   "permissions": [
     "tabs",
